--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "name": "videotest",
   "version": "1.0.0",
-  "main": "server.js",
+  "main": "serverGraph.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
